feat: Header 및 Side Navigation Bar 추가

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -1,3 +1,11 @@
 {
-    "test": "TEST"
+  "test": "TEST",
+  "newWindow": "new window",
+  "viewer": "viewer",
+  "showQuery": "Show Query",
+  "reportProperty": "Report Property",
+  "dashboard": "Dashboard",
+  "adhoc": "AdHoc",
+  "dataset": "Dataset",
+  "preference": "Preference"
 }
