feat: 데이터원본, 데이터 항목 추가 및 Draggable 레이아웃 구현

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -7,5 +7,39 @@
   "dashboard": "Dashboard",
   "adhoc": "AdHoc",
   "dataset": "Dataset",
-  "preference": "Preference"
+  "preference": "Preference",
+  "dataSource": "Datasource",
+  "field": "Field",
+  "attribute": "Attribute",
+  "addCustomField": "add custom field",
+  "dataSourceModify": "data source modify",
+  "dataSourceRemove": "data source remove",
+  "dataItem": "Data Item",
+  "dimension": "Dimension",
+  "measure": "Measure",
+  "dimensionPlaceholder": "New Dimension",
+  "measurePlaceholder": "New Measure",
+  "defaultReportName": "New Report",
+  "filtering": "Filtering",
+  "editFilter": "Edit Filter",
+  "resetFilter": "Reset Filter",
+  "interaction": "Interaction",
+  "singleMasterFilter": "Single Master Filter",
+  "multiMasterFilter": "Multi Master Filter",
+  "drillDown": "Drill Down",
+  "interactionConfiguration": "Interaction Configuration",
+  "crossDataSourceFiltering": "Cross Data Source Filtering",
+  "ignoreMasterFilter": "Ignore Master Filter",
+  "targetDimension": "Target Dimension",
+  "dimensionGroup": "Dimension Group",
+  "count": "Count",
+  "distinctCount": "Dinstinct Count",
+  "sum": "Sum",
+  "min": "Min",
+  "max": "Max",
+  "average": "Average",
+  "format": "Format",
+  "rename": "Rename",
+  "sortBy": "Sort By",
+  "topN": "Top N"
 }
