--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -7,5 +7,39 @@
   "dashboard": "대시보드",
   "adhoc": "비정형 보고서",
   "dataset": "데이터집합",
-  "preference": "환경설정"
+  "preference": "환경설정",
+  "dataSource": "데이터 원본",
+  "field": "필드",
+  "attribute": "속성",
+  "addCustomField": "사용자 정의 데이터 추가",
+  "dataSourceModify": "데이터집합 수정",
+  "dataSourceRemove": "데이터집합 삭제",
+  "dataItem": "데이터 항목",
+  "dimension": "차원",
+  "measure": "측정값",
+  "dimensionPlaceholder": "새 차원",
+  "measurePlaceholder": "새 측정값",
+  "defaultReportName": "새 보고서",
+  "filtering": "필터링",
+  "editFilter": "필터 편집",
+  "resetFilter": "초기화",
+  "interaction": "상호작용",
+  "singleMasterFilter": "단일 마스터 필터",
+  "multiMasterFilter": "다중 마스터 필터",
+  "drillDown": "드릴 다운",
+  "interactionConfiguration": "상호작용 설정",
+  "crossDataSourceFiltering": "교차 데이터 소스 필터링",
+  "ignoreMasterFilter": "마스터 필터 무시",
+  "targetDimension": "차원",
+  "dimensionGroup": "차원 그룹",
+  "count": "카운트",
+  "distinctCount": "고유 카운트",
+  "sum": "합계",
+  "min": "최소값",
+  "max": "최대값",
+  "average": "평균",
+  "format": "Format",
+  "rename": "Rename",
+  "sortBy": "Sort By",
+  "topN": "Top N"
 }
