feat: Ribbon 추가

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -7,5 +7,28 @@
   "dashboard": "Dashboard",
   "adhoc": "AdHoc",
   "dataset": "Dataset",
-  "preference": "Preference"
+  "preference": "Preference",
+  "newReport": "NewReport",
+  "loadReport": "LoadReport",
+  "saveReport": "SaveReport",
+  "deleteReport": "DeleteReport",
+  "downloadReport": "DownlaodReport",
+  "connectReport": "ConnectReport",
+  "addContainer": "AddContainer",
+  "addChart": "AddChart",
+  "addPivotGrid": "AddPivotGrid",
+  "addGrid": "AddGrid",
+  "addCustomChart": "AddCustomChart",
+  "captionView": "Caption",
+  "nameEdit": "Edit Name",
+  "rotate": "Rotate",
+  "xAxisSetting": "XAxis Setting",
+  "yAxisSetting": "YAxis Setting",
+  "extraAxisSetting": "ExtraAxis Setting",
+  "showColorLegend": "Show ColorLegend",
+  "barTwo": "Bar Type",
+  "palette": "Palette",
+  "colorEdit": "Color Edit",
+  "pointLabel": "Animation",
+  "querySearch": "QuerySearch"
 }
