--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -7,5 +7,28 @@
   "dashboard": "대시보드",
   "adhoc": "비정형 보고서",
   "dataset": "데이터집합",
-  "preference": "환경설정"
+  "preference": "환경설정",
+  "newReport": "새로 만들기",
+  "loadReport": "불러오기",
+  "saveReport": "저장",
+  "deleteReport": "삭제",
+  "downloadReport": "다운로드",
+  "connectReport": "연결 보고서",
+  "addContainer": "컨테이너 추가",
+  "addChart": "일반 차트",
+  "addPivotGrid": "피벗 그리드",
+  "addGrid": "일반 그리드",
+  "addCustomChart": "고급 시각화",
+  "captionView": "캡션 보기",
+  "nameEdit": "이름 편집",
+  "rotate": "회전",
+  "xAxisSetting": "X축 설정",
+  "yAxisSetting": "Y축 설정",
+  "extraAxisSetting": "보조축 설정",
+  "showColorLegend": "범례",
+  "barTwo": "계열 유형",
+  "palette": "팔레트",
+  "colorEdit": "색상 편집",
+  "pointLabel": "애니메이션",
+  "querySearch": "조회"
 }
