리본버튼 스네일 케이싱 적용 및 오류 수정

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -60,7 +60,7 @@
   "yAxisSetting": "YAxis Setting",
   "extraAxisSetting": "ExtraAxis Setting",
   "showColorLegend": "Show ColorLegend",
-  "barTwo": "Bar Type",
+  "SeriesType": "Series Type",
   "palette": "Palette",
   "colorEdit": "Color Edit",
   "pointLabel": "Animation",
