pref: 공용보고서, 개인보고서 loacalization 추가

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -64,5 +64,7 @@
   "palette": "Palette",
   "colorEdit": "Color Edit",
   "pointLabel": "Animation",
-  "querySearch": "QuerySearch"
+  "querySearch": "QuerySearch",
+  "publicReport": "Public Report",
+  "privateReport": "Private Report"
 }
