pref: header right 추가
디자이너 text로 변경,
다운로드 text 추가

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -66,5 +66,6 @@
   "pointLabel": "Animation",
   "querySearch": "QuerySearch",
   "publicReport": "Public Report",
-  "privateReport": "Private Report"
+  "privateReport": "Private Report",
+  "designer": "디자이너"
 }
