--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -66,5 +66,6 @@
   "pointLabel": "애니메이션",
   "querySearch": "조회",
   "publicReport": "공용 보고서",
-  "privateReport": "개인 보고서"
+  "privateReport": "개인 보고서",
+  "designer": "디자이너"
 }
