--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -67,5 +67,11 @@
   "querySearch": "조회",
   "publicReport": "공용 보고서",
   "privateReport": "개인 보고서",
-  "designer": "디자이너"
+  "designer": "디자이너",
+  "next": "다음",
+  "previous": "이전",
+  "confirm": "확인",
+  "cancel": "취소",
+  "warning": "경고",
+  "alert": "알림"
 }
