feat : 주제영역 불러오기 layout 개발

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -67,5 +67,9 @@
   "querySearch": "QuerySearch",
   "publicReport": "Public Report",
   "privateReport": "Private Report",
-  "designer": "디자이너"
+  "designer": "디자이너",
+  "selectCube": "Select a Cube",
+  "dataSourceList": "DataSource List",
+  "cubeList": "Cube List",
+  "cubeComment": "Cube Comment"
 }
