--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -67,5 +67,9 @@
   "querySearch": "조회",
   "publicReport": "공용 보고서",
   "privateReport": "개인 보고서",
-  "designer": "디자이너"
+  "designer": "디자이너",
+  "selectCube": "주제영역 선택",
+  "dataSourceList": "데이터원본 리스트",
+  "cubeList": "주제영역 리스트",
+  "cubeComment": "주제영역 설명"
 }
