feat: 쿼리 데이터 집합 localization 적용, fix: ModalPanel 렌더링 오류 수정

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -77,5 +77,23 @@
   "selectCube": "Select a Cube",
   "dataSourceList": "DataSource List",
   "cubeList": "Cube List",
-  "cubeComment": "Cube Comment"
+  "cubeComment": "Cube Comment",
+  "datsetDesigner": "Dataset Designer",
+  "dataSourceInfo": "Data Source Information",
+  "query": "Query",
+  "parameter": "Parameter",
+  "parameterName": "Parameter Name",
+  "parameterCaption": "Parameter Caption",
+  "dataType": "Data Type",
+  "parameterType": "Parameter Type",
+  "multiSelect": "Multi Select",
+  "order": "Order",
+  "conditionName": "Condition",
+  "defaultDatasetName": "Dataset",
+  "dataSourceNotSelectedMsg": "No data source selected.",
+  "selectDataSource": "Select Data Source",
+  "dataSourceName": "Data Source Name",
+  "dbType": "DB Type",
+  "dbAddress": "DB Address",
+  "userData": "User Data"
 }
