--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -75,7 +75,25 @@
   "warning": "경고",
   "alert": "알림",
   "selectCube": "주제영역 선택",
-  "dataSourceList": "데이터원본 리스트",
+  "dataSourceList": "데이터 원본 리스트",
   "cubeList": "주제영역 리스트",
-  "cubeComment": "주제영역 설명"
+  "cubeComment": "주제영역 설명",
+  "datsetDesigner": "데이터집합 디자이너",
+  "dataSourceInfo": "데이터 원본 정보",
+  "query": "쿼리",
+  "parameter": "매개변수",
+  "parameterName": "매개변수 명",
+  "parameterCaption": "매개변수 캡션",
+  "dataType": "데이터 유형",
+  "parameterType": "매개변수 유형",
+  "multiSelect": "다중 선택",
+  "order": "순서",
+  "conditionName": "조건 명",
+  "defaultDatasetName": "데이터집합",
+  "dataSourceNotSelectedMsg": "데이터 원본을 선택하지 않았습니다.",
+  "selectDataSource": "데이터 원본 선택",
+  "dataSourceName": "데이터 원본 명",
+  "dbType": "DB 유형",
+  "dbAddress": "서버 주소(명)",
+  "userData": "사용자 데이터"
 }
