feat: localization 누락본 추가

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -93,7 +93,13 @@
   "dataSourceNotSelectedMsg": "No data source selected.",
   "selectDataSource": "Select Data Source",
   "dataSourceName": "Data Source Name",
+  "dbName": "DB Name",
   "dbType": "DB Type",
   "dbAddress": "DB Address",
-  "userData": "User Data"
+  "userData": "User Data",
+  "datasetName": "Dataset Name",
+  "editDatasetName": "Edit Dataset Name",
+  "owner": "Owner",
+  "dbId": "DB User ID",
+  "description": "Description"
 }
