feat: 차트 데이터 조회 추가

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -16,8 +16,10 @@
   "dataSourceRemove": "data source remove",
   "dataItem": "Data Item",
   "dimension": "Dimension",
+  "dimensionGrop": "Dimension Group",
   "measure": "Measure",
   "dimensionPlaceholder": "New Dimension",
+  "dimensionGroupPlaceholder": "New Dimension Group",
   "measurePlaceholder": "New Measure",
   "defaultReportName": "New Report",
   "filtering": "Filtering",
@@ -78,7 +80,7 @@
   "dataSourceList": "DataSource List",
   "cubeList": "Cube List",
   "cubeComment": "Cube Comment",
-  "datsetDesigner": "Dataset Designer",
+  "datasetDesigner": "Dataset Designer",
   "dataSourceInfo": "Data Source Information",
   "query": "Query",
   "parameter": "Parameter",
