--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -16,8 +16,10 @@
   "dataSourceRemove": "데이터집합 삭제",
   "dataItem": "데이터 항목",
   "dimension": "차원",
+  "dimensionGrop": "차원 그룹",
   "measure": "측정값",
   "dimensionPlaceholder": "새 차원",
+  "dimensionGroupPlaceholder": "새 차원 그룹",
   "measurePlaceholder": "새 측정값",
   "defaultReportName": "새 보고서",
   "filtering": "필터링",
@@ -78,7 +80,7 @@
   "dataSourceList": "데이터 원본 리스트",
   "cubeList": "주제영역 리스트",
   "cubeComment": "주제영역 설명",
-  "datsetDesigner": "데이터집합 디자이너",
+  "datasetDesigner": "데이터집합 디자이너",
   "dataSourceInfo": "데이터 원본 정보",
   "query": "쿼리",
   "parameter": "매개변수",
