feat: 피벗그리드 메타 추가 및 Item 조회 구조 리팩토링

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -103,5 +103,9 @@
   "editDatasetName": "Edit Dataset Name",
   "owner": "Owner",
   "dbId": "DB User ID",
-  "description": "Description"
+  "description": "Description",
+  "row": "Row",
+  "column": "Column",
+  "rowPlaceholder": "New Row",
+  "columnPlaceholder": "New Column"
 }
