feat: dataGrid 아이템 생성
flxlayout 추가
데이터 항목 UI추가 (필드, 스파크 라인)

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -107,5 +107,8 @@
   "row": "Row",
   "column": "Column",
   "rowPlaceholder": "New Row",
-  "columnPlaceholder": "New Column"
+  "columnPlaceholder": "New Column",
+  "fieldPlaceholder": "New Field",
+  "sparkline": "Spark Line",
+  "sparklinePlaceholder": "new Spark Line"
 }
