--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -110,5 +110,11 @@
   "columnPlaceholder": "새 행",
   "fieldPlaceholder": "새 필드",
   "sparkline": "스파크 라인",
-  "sparklinePlaceholder": "새 스파크 라인"
+  "sparklinePlaceholder": "새 스파크 라인",
+  "reportName": "보고서명",
+  "reportSubTitle": "보고서 부제목",
+  "annotation": "주석",
+  "displayOrder": "표시 순서",
+  "selectFolder": "폴더 선택",
+  "folderList": "폴더 목록"
 }
