feat: 필터 편집 front 데이터 구조 생성
- 필터 렌더링 미포함

--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -110,5 +110,43 @@
   "columnPlaceholder": "새 행",
   "fieldPlaceholder": "새 필드",
   "sparkline": "스파크 라인",
-  "sparklinePlaceholder": "새 스파크 라인"
+  "sparklinePlaceholder": "새 스파크 라인",
+  "editParameter": "매개변수 편집",
+  "parameterList": "매개변수 목록",
+  "parameterBasicInformation": "매개변수 기본 정보",
+  "parameterRenderingOption": "렌더링 옵션",
+  "detailOption": "상세 옵션",
+  "useDataSearchOption": "데이터 검색",
+  "width": "넓이",
+  "useCaptionWidth": "캡션 넓이 사용",
+  "captionWidth": "캡션 넓이",
+  "lineBreak": "즐바꿈",
+  "itemCaption": "Caption 항목",
+  "itemKey": "Key 항목",
+  "defaultParameter": "매개변수 기본값",
+  "sort": "정렬",
+  "asc": "오름차순",
+  "desc": "내림차순",
+  "list": "리스트",
+  "calendar": "달력",
+  "input": "입력창",
+  "useAll": "[전체] 항목 표시",
+  "table": "테이블",
+  "tableList": "테이블 목록",
+  "dataSourceType": "데이터원본 유형",
+  "defaultValueUseSql": "기본값 SQL 쿼리 사용",
+  "exceptionValue": "조건절",
+  "tablePhysicalName": "테이블 물리명",
+  "tableLogicalName": "테이블 논리명",
+  "columnPhysicalName": "컬럼 물리명",
+  "columnLogicalName": "컬럼 논리명",
+  "defaultValueType": "기본값 유형",
+  "calculateDefaultValue": "기본값 계산",
+  "calendarMaxValue": "최대 조회 기간",
+  "now": "현재",
+  "calendarKeyFormat": "Key Value 형식",
+  "calendarCaptionFormat": "Caption Value 형식",
+  "year": "년도",
+  "month": "월",
+  "date": "일"
 }
