--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -112,7 +112,7 @@
   "sparkline": "스파크 라인",
   "sparklinePlaceholder": "새 스파크 라인",
   "reportName": "보고서명",
-  "reportSubTitle": "보고서 부제목",
+  "reportSubName": "보고서 부제목",
   "annotation": "주석",
   "displayOrder": "표시 순서",
   "selectFolder": "폴더 선택",
