feat: 저장 폴더 불러오기 개발

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -116,5 +116,7 @@
   "annotation": "Annotation",
   "displayOrder": "Display Order",
   "selectFolder": "Select Folder",
-  "folderList": "Folder List"
+  "folderList": "Folder List",
+  "publicFolder": "Public Folder",
+  "privateFolder": "Private Folder"
 }
