--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -116,5 +116,7 @@
   "annotation": "주석",
   "displayOrder": "표시 순서",
   "selectFolder": "폴더 선택",
-  "folderList": "폴더 목록"
+  "folderList": "폴더 목록",
+  "publicFolder": "공용 폴더",
+  "privateFolder": "개인 폴더"
 }
