--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -3,6 +3,7 @@
   "newWindow": "새 창 열기",
   "viewer": "뷰어",
   "showQuery": "쿼리보기",
+  "addDsSQL": "쿼리 직접 입력",
   "reportProperty": "보고서 속성",
   "dashboard": "대시보드",
   "adhoc": "비정형 보고서",
@@ -76,6 +77,7 @@
   "cancel": "취소",
   "warning": "경고",
   "alert": "알림",
+  "addCUBE": "주제영역",
   "selectCube": "주제영역 선택",
   "dataSourceList": "데이터 원본 리스트",
   "cubeList": "주제영역 리스트",
@@ -110,5 +112,22 @@
   "columnPlaceholder": "새 행",
   "fieldPlaceholder": "새 필드",
   "sparkline": "스파크 라인",
-  "sparklinePlaceholder": "새 스파크 라인"
+  "sparklinePlaceholder": "새 스파크 라인",
+  "barChart": "막대 차트",
+  "saveAs": "다른 이름으로 저장",
+  "etc": "기타",
+  "MSOffice": "MSOffice",
+  "hancom": "Hancom",
+  "excelXlsx": "EXCEL(.xlsx)",
+  "excelXls": "EXCEL(.xls)",
+  "word": "WORD(.doc)",
+  "powerpoint": "POWERPOINT(.ppt)",
+  "hwp": "hwp",
+  "cell": "cell",
+  "show": "show",
+  "img": "img",
+  "html": "html",
+  "pdf": "pdf",
+  "addDsUpload": "사용자 업로드",
+  "addDsSingle": "단일 테이블"
 }
