pref: REPORT_TITLE 명칭 변경

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -111,8 +111,8 @@
   "fieldPlaceholder": "New Field",
   "sparkline": "Spark Line",
   "sparklinePlaceholder": "New Spark Line",
-  "reportName": "Report Name",
-  "reportSubName": "Report Sub Name",
+  "reportTitle": "Report Title",
+  "reportSubName": "Report Sub Title",
   "annotation": "Annotation",
   "displayOrder": "Display Order",
   "selectFolder": "Select Folder",
