pref: "검색" localization 추가

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -118,5 +118,6 @@
   "selectFolder": "Select Folder",
   "folderList": "Folder List",
   "publicFolder": "Public Folder",
-  "privateFolder": "Private Folder"
+  "privateFolder": "Private Folder",
+  "search": "Search"
 }
