불필요 코드 제거 및 localizedString 고급 시각화 내용 추가
제목과 동일

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -152,5 +152,48 @@
   "calendarCaptionFormat": "Caption Value Format",
   "year": "year",
   "month": "month",
-  "day": "day"
+  "day": "day",
+  "pieChart": "PieChart",
+  "histogram": "Histogram",
+  "wordCloud": "Word Cloud",
+  "bubbleChart": "Bubble Chart",
+  "waterfallChart": "Waterfall Chart",
+  "scatterPlot": "Scatter Plot",
+  "scatterPlotMatrix": "Scatter Plot Matrix",
+  "bivariateChart": "Bivariate Chart",
+  "sankeyChart": "Sankey Chart",
+  "hierarchyChart": "Hierarchy Chart",
+  "networkReduce": "Network-Reduce",
+  "networkMagnify": "Network-Magnify",
+  "dependencyWheel": "Dependency Wheel",
+  "calendarView": "Calendar View",
+  "calendarView2": "Calendar2 View",
+  "calendarView3": "Calendar3 View",
+  "arcDiagram": "Arc Diagram",
+  "cartesianCoordinateSystem": "Cartesian Coordinate System",
+  "starChart": "Star Chart",
+  "treemap": "Treemap",
+  "bubblePack": "BubblePack",
+  "compareToPositiveNegative": "Compare to Positive/Negative",
+  "boxPlot": "BoxPlot",
+  "neuralNetworkBar": "Neural Network Bar",
+  "liquidGauge": "Liquid Gauge",
+  "heatmap": "Heatmap",
+  "sunburst": "Sunburst",
+  "neuralNetworkTree": "Neural Network Tree",
+  "radialNeuralNetwork": "Radial Neural Network",
+  "timeline": "Timeline",
+  "planeCoordinateLine": "Plane Coordinate Line",
+  "planeCoordinatePoint": "Plane Coordinate Point",
+  "synchronizedLineChart": "Synchronized Line Chart",
+  "comboBox": "ComboBox",
+  "listBox": "ListBox",
+  "treeView": "TreeView",
+  "image": "Image",
+  "textBox": "TextBox",
+  "choropleth": "Choropleth",
+  "card": "Card",
+  "rectangleArea": "Rectangle Area",
+  "pivotgrid": "Pivotgrid",
+  "nomalGrid": "Grid"
 }
