--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -167,5 +167,45 @@
   "calendarCaptionFormat": "Caption Value 형식",
   "year": "년도",
   "month": "월",
-  "day": "일"
+  "day": "일",
+  "histogram": "히스토그램",
+  "wordCloud": "워드 클라우드",
+  "BubbleChart": "버블차트",
+  "waterfallChart": "폭포수차트",
+  "scatterPlot": "산점도",
+  "scatterPlotMatrix": "산점도 행렬",
+  "bivariateChart": "이분법 차트",
+  "sankeyChart": "센키차트",
+  "hierarchyChart": "계층차트",
+  "networkReduce": "네트워크-축소",
+  "networkMagnify": "네트워크-확대",
+  "dependencyWheel": "의존성 휠",
+  "calendarView": "캘린더 뷰",
+  "calendarView2": "캘린더2 뷰",
+  "calendarView3": "캘린더3 뷰",
+  "arcDiagram": "아크 다이어그램",
+  "cartesianCoordinateSystem": "평행 좌표계",
+  "starChart": "스타차트",
+  "Treemap": "트리맵",
+  "bubblePack": "버블팩",
+  "compareToPositiveNegative": "긍정/부정 비교",
+  "boxPlot": "박스플롯",
+  "NeuralNetworkBar": "신경망 바",
+  "liquidGauge": "액체 게이지",
+  "heatmap": "히트맵",
+  "sunburst": "선버스트",
+  "neuralNetworkTree": "신경망 트리",
+  "radialNeuralNetwork": "방사형신경망",
+  "timeline": "타임라인",
+  "planeCoordinateLine": "평면좌표라인",
+  "planeCoordinatePoint": "평면좌표점",
+  "synchronizedLineChart": "동기화라인차트",
+  "comboBox": "콤보박스",
+  "listBox": "리스트박스",
+  "treeView": "트리보기",
+  "image": "이미지",
+  "textBox": "텍스트 상자",
+  "choropleth": "코로플레스",
+  "card": "카드",
+  "rectangleArea": "네모영역"
 }
