Revert "pref: "검색" localization 추가"
This reverts commit 87ec2f379f981225f1c36438fc3a2590a1603d48.

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -118,6 +118,5 @@
   "selectFolder": "Select Folder",
   "folderList": "Folder List",
   "publicFolder": "Public Folder",
-  "privateFolder": "Private Folder",
-  "search": "Search"
+  "privateFolder": "Private Folder"
 }
