--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -3,9 +3,12 @@
   "newWindow": "새 창 열기",
   "viewer": "뷰어",
   "showQuery": "쿼리보기",
+  "reportSetting": "보고서 설정",
   "reportProperty": "보고서 속성",
+  "userInfomation": "사용자 정보",
   "dashboard": "대시보드",
   "adhoc": "비정형 보고서",
+  "spreadsheet": "스프레드 시트",
   "dataset": "데이터집합",
   "preference": "환경설정",
   "dataSource": "데이터 원본",
