pref: 삭제 알림창 추가 및 localization

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -204,5 +204,7 @@
   "card": "Card",
   "rectangleArea": "Rectangle Area",
   "pivotgrid": "Pivotgrid",
-  "nomalGrid": "Grid"
+  "nomalGrid": "Grid",
+  "reportNotDeleteMsg": "This report has not been saved.",
+  "reportDeleteMsg": "Are you sure you want to delete the report?"
 }
