--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -216,5 +216,7 @@
   "textBox": "텍스트 상자",
   "choropleth": "코로플레스",
   "card": "카드",
-  "rectangleArea": "네모영역"
+  "rectangleArea": "네모영역",
+  "reportNotDeleteMsg": "저장이 안된 보고서 입니다.",
+  "reportDeleteMsg": "보고서를 삭제하시겠습니까?"
 }
