--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -204,5 +204,7 @@
   "card": "Card",
   "rectangleArea": "Rectangle Area",
   "pivotgrid": "Pivotgrid",
-  "nomalGrid": "Grid"
+  "nomalGrid": "Grid",
+  "editFieldName": "Edit Field Name",
+  "fieldName": "Field Name"
 }
