--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -216,5 +216,7 @@
   "textBox": "텍스트 상자",
   "choropleth": "코로플레스",
   "card": "카드",
-  "rectangleArea": "네모영역"
+  "rectangleArea": "네모영역",
+  "editFieldName": "필드 명 수정",
+  "fieldName": "필드 명"
 }
