--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -208,5 +208,7 @@
   "editFieldName": "Edit Field Name",
   "fieldName": "Field Name",
   "reportNotDeleteMsg": "This report has not been saved.",
-  "reportDeleteMsg": "Are you sure you want to delete the report?"
+  "reportDeleteMsg": "Are you sure you want to delete the report?",
+  "sortByItem": "Sort By Item",
+  "newSortByItem": "New Sort By Item"
 }
