사용자 정의 데이터 UI V1.0.0
사용자 정의 데이터
- 내부 STATE 및 화면 설계 완료

--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -1,4 +1,11 @@
 {
+  "userDefinedData":{
+    "title":"사용자 정의 데이터",
+    "styles":{
+      "width":"750px",
+      "height":"450px"
+    }
+  },
   "test": "테스트",
   "newWindow": "새 창 열기",
   "viewer": "뷰어",
