사용자정의 데이터 <UI>
Localization 삭제.

--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -1,10 +1,6 @@
 {
   "userDefinedData":{
-    "title":"사용자 정의 데이터",
-    "styles":{
-      "width":"750px",
-      "height":"450px"
-    }
+    "title":"사용자 정의 데이터"
   },
   "test": "테스트",
   "newWindow": "새 창 열기",
