--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -109,8 +109,8 @@
   "owner": "소유자",
   "dbId": "접속 ID",
   "description": "설명",
-  "row": "열",
-  "column": "행",
+  "row": "행",
+  "column": "열",
   "rowPlaceholder": "새 열",
   "columnPlaceholder": "새 행",
   "fieldPlaceholder": "새 필드",
