--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -240,5 +240,6 @@
   "reportNotDeleteMsg": "저장이 안된 보고서 입니다.",
   "reportDeleteMsg": "보고서를 삭제하시겠습니까?",
   "sortByItem": "정렬 기준 항목",
-  "newSortByItem": "새 정렬 기준 항목"
+  "newSortByItem": "새 정렬 기준 항목",
+  "dataHighlight": "데이터 하이라이트"
 }
