--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -1,6 +1,29 @@
 {
-  "userDefinedData":{
-    "title":"사용자 정의 데이터"
+  "alertInfo":{
+    "common":{
+      "invalid":"유효하지않습니다."
+    },
+    "customData":{
+      "empty":"필드명,계산식,타입이 빈값이 있습니다."
+    },
+    "customDataCalc":{
+      "empty":"필드명,계산식,타입이 빈값이 있습니다.",
+      "Inspection":"계산식이 검증되지 않았습니다."
+    }
+  },
+  "customData": {
+    "title":"사용자 정의 데이터",
+    "list":{
+      "fieldName":"필드명",
+      "expression":"계산식",
+      "type":"데이터형식"
+    }
+  },
+  "customDataCalc":{
+    "title":"계산식 편집",
+    "butons":{
+      "Inspection":"검사"
+    }
   },
   "test": "테스트",
   "newWindow": "새 창 열기",
