feat: 데이터 그리드 열 옵션 설정 개발

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -210,5 +210,11 @@
   "reportNotDeleteMsg": "This report has not been saved.",
   "reportDeleteMsg": "Are you sure you want to delete the report?",
   "sortByItem": "Sort By Item",
-  "newSortByItem": "New Sort By Item"
+  "newSortByItem": "New Sort By Item",
+  "fieldOptionSetting": "Field Option Setting",
+  "fieldType": "Field Type",
+  "visibility": "Visibility",
+  "detailSetting": "Detail Setting",
+  "value": "value",
+  "bar": "bar"
 }
