--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -225,5 +225,11 @@
   "reportNotDeleteMsg": "저장이 안된 보고서 입니다.",
   "reportDeleteMsg": "보고서를 삭제하시겠습니까?",
   "sortByItem": "정렬 기준 항목",
-  "newSortByItem": "새 정렬 기준 항목"
+  "newSortByItem": "새 정렬 기준 항목",
+  "fieldOptionSetting": "열 옵션 설정",
+  "fieldType": "필드 타입",
+  "visibility": "표시 여부",
+  "detailSetting": "세부 설정",
+  "value": "값",
+  "bar": "바"
 }
