--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -235,7 +235,7 @@
   "outside": "외부",
   "columnType": "컬럼",
   "pieType": "파이",
-  "donutType": "도넛",
+  "doughnutType": "도넛",
   "reloadConfirmMsg": "저장이 안된 경우 작업내용이 사라질 수 있습니다. 새로 만드시겠습니까?",
   "initState": "초기 상태",
   "expandRowGroup": "행 그룹 확장",
