--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -254,5 +254,9 @@
   "visibility": "표시 여부",
   "detailSetting": "세부 설정",
   "value": "값",
-  "bar": "바"
+  "bar": "바",
+  "datasetBinding": "데이터집합 연동",
+  "file": "파일",
+  "importFileFromPC": "파일 불러오기",
+  "print": "프린트"
 }
