fix: 필터 useAll 오류 수정

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -239,5 +239,6 @@
   "detailSetting": "Detail Setting",
   "value": "value",
   "bar": "bar",
-  "reloadConfirmMsg": "If it is not saved, your work may be lost. Would you like to create a new one?"
+  "reloadConfirmMsg": "If it is not saved, your work may be lost. Would you like to create a new one?",
+  "all": "all"
 }
