코멘트에 맞게 수정

--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -180,6 +180,7 @@
   "month": "월",
   "day": "일",
   "datasetNotSelected": "데이터집합이 선택되지 않았습니다.",
+  "pieChart": "파이차트",
   "histogram": "히스토그램",
   "wordCloud": "워드 클라우드",
   "BubbleChart": "버블차트",
@@ -263,14 +264,48 @@
   "fieldType": "필드 타입",
   "visibility": "표시 여부",
   "detailSetting": "세부 설정",
-  "value": "값",
   "bar": "바",
   "round": "반올림",
   "ceil": "올림",
   "floor": "버림",
-  "formatItems": ["없음", "인수", "값", "%", "인수 및 값", "값 및 %",
-    "인수 및 %", "인수, 값 및 %"],
-  "degreeOptions": ["반올림", "올림", "버림"],
-  "labelDataEdit": "라벨 데이터 편집"
-
+  "none": "없음",
+  "argument": "인수",
+  "value": "값",
+  "percent": "%",
+  "argumentValue": "인수 및 값",
+  "valuePercent": "값 및 %",
+  "argumentPercent": "인수 및 %",
+  "argumentValuePercent": "인수, 값 및 %",
+  "formatItems": [
+    {"name": "none", "caption": "없음"},
+    {"name": "argument", "caption": "인수"},
+    {"name": "value", "caption": "값"},
+    {"name": "percent", "caption": "%"},
+    {"name": "argument&Value", "caption": "인수 및 값"},
+    {"name": "value&Percent", "caption": "값 및 %"},
+    {"name": "argument&Percent", "caption": "인수 및 %"},
+    {"name": "argument&Value&Percent", "caption": "인수, 값 및 %"}
+  ],
+  "degreeOptions": [
+    {"name": "round", "caption": "반올림"},
+    {"name": "roundUp", "caption": "올림"},
+    {"name": "roundDown", "caption": "버림"}
+  ],
+  "labelDataEdit": "라벨 데이터 편집",
+  "showTitle": "제목 보기",
+  "formatType": "표기 형식",
+  "prefix": "접두사",
+  "customPrefix": "사용자 지정 접두사",
+  "customSuffix": "사용자 지정 접미사",
+  "suffix": "접미사",
+  "inputPrefix": "접두사 입력",
+  "ones": "일 단위",
+  "thousands": "천 단위",
+  "milions": "백만 단위",
+  "bilions": "십억 단위",
+  "degree": "정도",
+  "precision": "정도",
+  "degreeOption": "정도 옵션",
+  "precisionOption": "정도 옵션",
+  "unit": "단위"
 }
