--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -247,15 +247,48 @@
   "fieldType": "Field Type",
   "visibility": "Visibility",
   "detailSetting": "Detail Setting",
-  "value": "value",
   "bar": "bar",
   "reloadConfirmMsg": "If it is not saved, your work may be lost. Would you like to create a new one?",
   "round": "Round",
   "ceil": "Round Up",
   "floor": "Round Down",
-  "formatItems": ["none", "Argument", "Value", "%", "Argument & Value", "Value & %",
-    "Argument & %", "Argument, Value & %"],
-  "degreeOptions": ["Round", "Round Up", "Round Down"],
-  "labelDataEdit": "Label Edit"
-
+  "formatItems": [
+    {"name": "none", "caption": "None"},
+    {"name": "argument", "caption": "Argument"},
+    {"name": "value", "caption": "Value"},
+    {"name": "percent", "caption": "%"},
+    {"name": "argument&Value", "caption": "Argument & Value"},
+    {"name": "value&Percent", "caption": "Value & %"},
+    {"name": "argument&Percent", "caption": "Argument & %"},
+    {"name": "argument&Value&Percent", "caption": "Argument, Value & %"}
+  ],
+  "degreeOptions": [
+    {"name": "round", "caption": "Round"},
+    {"name": "roundUp", "caption": "Round Up"},
+    {"name": "roundDown", "caption": "Round Down"}
+  ],
+  "labelDataEdit": "Label Edit",
+  "none": "None",
+  "argument": "Argument",
+  "value": "Value",
+  "percent": "%",
+  "argument&value": "Argument & Value",
+  "value&percent": "Value & %",
+  "argument&percent": "Argument & %",
+  "argument&value&percent": "Argument, Value & %",
+  "showTitle": "Show Title",
+  "formatType": "Display Format",
+  "prefix": "Prefix",
+  "customPrefix": "Custom Prefix",
+  "customSuffix": "Custom Suffix",
+  "suffix": "Suffix",
+  "inputPrefix": "Input Prefix",
+  "ones": "Unit of Ones",
+  "thousands": "Unit of Thousands",
+  "milions": "Unit of Milions",
+  "bilions": "Unit of Bilions",
+  "degree": "Degree",
+  "precision": "Precision",
+  "degreeOption": "Degree Option",
+  "precisionOption": "Precision Option"
 }
