--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -240,5 +240,6 @@
   "value": "value",
   "bar": "bar",
   "reloadConfirmMsg": "If it is not saved, your work may be lost. Would you like to create a new one?",
-  "all": "all"
+  "all": "all",
+  "colRowSwitch": "Transpose"
 }
