--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -258,5 +258,6 @@
   "datasetBinding": "데이터집합 연동",
   "file": "파일",
   "importFileFromPC": "파일 불러오기",
-  "print": "프린트"
+  "print": "프린트",
+  "spreadBindingInfoNot": "해당 보고서에 데이터 연결 정보가 없습니다."
 }
