feat: 상세데이터 보기 / 그리드로 보기 추가

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -292,5 +292,7 @@
   "degreeOption": "Degree Option",
   "precisionOption": "Precision Option",
   "all": "all",
-  "colRowSwitch": "Transpose"
+  "colRowSwitch": "Transpose",
+  "showGrid": "View as a grid",
+  "detailedData": "Detailed Data"
 }
