대시보드 비정형 불러오기 수정

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -292,5 +292,11 @@
   "degreeOption": "Degree Option",
   "precisionOption": "Precision Option",
   "all": "all",
-  "colRowSwitch": "Transpose"
+  "colRowSwitch": "Transpose",
+  "datasetBinding": "Dataset Binding",
+  "file": "file",
+  "importFileFromPC": "Import File From PC",
+  "print": "Print",
+  "spreadBindingInfoNot": "This Report Dosen't have Dataset Binding Info."
+
 }
