localization 처리 수정

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -302,5 +302,8 @@
   "decimalUnit": "Decimal Unit",
   "roundUnit": "Round Unit",
   "includesGroupDistinction" : "Includes Group Distinction",
-  "colRowSwitch": "Transpose"
+  "colRowSwitch": "Transpose",
+  "k": "K",
+  "m": "M",
+  "b": "B"
 }
