--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -150,7 +150,7 @@
   "width": "넓이",
   "useCaptionWidth": "캡션 넓이 사용",
   "captionWidth": "캡션 넓이",
-  "lineBreak": "즐바꿈",
+  "lineBreak": "줄바꿈",
   "itemCaption": "Caption 항목",
   "itemKey": "Key 항목",
   "defaultParameter": "매개변수 기본값",
