--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -239,5 +239,8 @@
   "detailSetting": "Detail Setting",
   "value": "value",
   "bar": "bar",
-  "reloadConfirmMsg": "If it is not saved, your work may be lost. Would you like to create a new one?"
+  "reloadConfirmMsg": "If it is not saved, your work may be lost. Would you like to create a new one?",
+  "generateConfigure": "generateConfigure",
+  "userManagement": "userManagement",
+  "groupManagement": "groupManagement"
 }
