--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -254,5 +254,8 @@
   "visibility": "표시 여부",
   "detailSetting": "세부 설정",
   "value": "값",
-  "bar": "바"
+  "bar": "바",
+  "generateConfigure": "일반 설정",
+  "userManagement": "사용자 관리",
+  "groupManagement": "그룹 관리"
 }
